# CaptureTheFlag

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
configuration/: root_directory.h.in
configuration/linux/: CaptureTheFlag.desktop
configuration/macos/: Info.plist  icon.icns
configuration/windows/: Resource.rc
src/: Game.cpp  Game.hpp  button.cpp  main.cpp
src/core/: Artillery.cpp  Artillery.hpp  Base.cpp  Base.hpp  Cavalry.cpp  Cavalry.hpp  Entity.hpp  Infantrie.cpp  Infantrie.hpp  Infantry.cpp  Infantry.hpp
src/networking/: NetworkManager.cpp  NetworkManager.hpp
src/utils/: AudioManager.cpp  AudioManager.hpp  Button.cpp  Button.hpp  Filesystem.hpp  Math.hpp  Packets.hpp  ViewTransform.hpp
